# EnterprisePlatform

./: .env.example  .gitignore  LEARNING_PATH.md  README.md  docker-compose.phase2.yml  docker-compose.phase3.yml  docker-compose.phase4.yml  docker-compose.phase5.yml  docker-compose.phase6.yml  docker-compose.phase7.yml  docker-compose.yml
learning/: __init__.py  pyproject.toml
learning/phase_1/: __init__.py  pyproject.toml  run_phase1.py
learning/phase_1/exercises/: ex1_rate_limiter.py  ex2_jwt_rotation.py  ex3_api_versioning.py  ex4_connection_pool.py  ex5_cache_stampede.py  ex6_health_aggregator.py  ex7_circuit_breaker.py
learning/phase_1/src/: __init__.py
learning/phase_1/tests/: conftest.py  test_m01.py  test_m02.py  test_m03.py  test_m04.py  test_m05.py  test_m06.py
learning/phase_2/src/: __init__.py
learning/phase_2/tests/: test_m07.py  test_m08.py  test_m09.py  test_m10.py  test_m11.py  test_m12.py
learning/phase_3/exercises/: ex1_tumbling_window.py  ex2_star_schema_mapper.py  ex3_medallion_transform.py  ex4_quality_rule_engine.py  ex5_incremental_loader.py  ex6_partition_pruning.py
learning/phase_3/tests/: conftest.py  test_m13_streaming_pipelines.py  test_m14_warehouse_design.py  test_m15_data_lake.py  test_m16_etl_patterns.py  test_m17_data_quality.py  test_m18_query_optimization.py
learning/phase_4/exercises/: ex1_point_in_time_features.py  ex2_training_loop.py  ex3_ab_test_router.py  ex4_psi_drift_detector.py  ex5_collaborative_filter.py  ex6_seasonal_decomposition.py
learning/phase_4/tests/: conftest.py  test_m19_feature_engineering.py  test_m20_training_pipelines.py  test_m21_model_serving.py  test_m22_ml_monitoring.py  test_m23_recommendations.py  test_m24_time_series.py
learning/phase_5/exercises/: ex1_pod_scheduler.py  ex2_helm_renderer.py  ex3_deployment_strategy.py  ex4_metric_aggregator.py  ex5_circuit_breaker.py  ex6_terraform_planner.py
learning/phase_5/src/: __init__.py
learning/phase_5/tests/: conftest.py  test_m25_kubernetes.py  test_m26_helm_kustomize.py  test_m27_cicd.py  test_m28_observability.py  test_m29_service_mesh.py  test_m30_iac.py
learning/phase_6/exercises/: ex1_eta_graph.py  ex2_demand_forecast.py  ex3_fraud_scorer.py  ex4_intent_classifier.py  ex5_bandit_algorithm.py  ex6_q_learning.py
learning/phase_6/src/: __init__.py
learning/phase_6/tests/: conftest.py  test_m31_eta_prediction.py  test_m32_demand_forecasting.py  test_m33_fraud_detection.py  test_m34_nlp_chatbot.py  test_m35_experimentation.py  test_m36_rl_dispatch.py
learning/phase_7/exercises/: ex1_crdt.py  ex2_chaos_hypothesis.py  ex3_latency_histogram.py  ex4_littles_law.py  ex5_pii_scanner.py  ex6_data_lineage.py  ex7_city_simulation.py
learning/phase_7/src/: __init__.py
learning/phase_7/tests/: conftest.py  test_m37_multi_region.py  test_m38_chaos_engineering.py  test_m39_performance_testing.py  test_m40_cost_optimization.py  test_m41_data_governance.py  test_m42_city_simulation.py
services/ab-test-analytics-service/: Dockerfile  pyproject.toml
services/ab-test-analytics-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/ab-test-analytics-service/tests/: conftest.py  test_api.py
services/access-control-service/: Dockerfile  pyproject.toml
services/access-control-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/access-control-service/tests/: test_api.py
services/address-service/: Dockerfile  pyproject.toml
services/address-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/address-service/tests/: test_api.py
services/alerting-service/: Dockerfile  pyproject.toml
services/alerting-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/alerting-service/tests/: conftest.py  test_api.py
services/analytics-service/: Dockerfile  pyproject.toml
services/analytics-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/analytics-service/tests/: conftest.py  test_api.py
services/autocomplete-service/: Dockerfile  pyproject.toml
services/autocomplete-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/autocomplete-service/tests/: test_api.py
services/bandit-service/: Dockerfile  pyproject.toml
services/bandit-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/bandit-service/tests/: conftest.py  test_api.py
services/batch-ingestion-service/: Dockerfile  pyproject.toml
services/batch-ingestion-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/batch-ingestion-service/tests/: test_api.py
services/batch-prediction-service/: Dockerfile  pyproject.toml
services/batch-prediction-service/src/: config.py  main.py  models.py  repository.py  schemas.py
services/batch-prediction-service/tests/: conftest.py  test_api.py
services/bucketing-service/: Dockerfile  pyproject.toml
services/bucketing-service/src/: config.py  main.py  models.py  (+2 more)
services/cdc-connector/: Dockerfile  pyproject.toml
services/chat-service/: Dockerfile  pyproject.toml
services/chatbot-service/: Dockerfile  pyproject.toml
services/city-simulator/: Dockerfile  pyproject.toml
services/compliance-reporting-service/: Dockerfile  pyproject.toml
services/config-service/: Dockerfile  pyproject.toml
services/cost-tracking-service/: Dockerfile  pyproject.toml
services/dashboard-service/: Dockerfile  pyproject.toml
services/data-catalog-service/: Dockerfile  pyproject.toml
services/data-export-service/: Dockerfile  pyproject.toml
services/data-governance-service/: Dockerfile  pyproject.toml
services/data-lake-writer/: Dockerfile  pyproject.toml
services/data-lineage-service/: Dockerfile  pyproject.toml
services/data-quality-service/: Dockerfile  pyproject.toml
services/data-replication-service/: Dockerfile  pyproject.toml
services/data-retention-service/: Dockerfile  pyproject.toml
services/demand-forecast-service/: Dockerfile  pyproject.toml
services/demand-simulator/: Dockerfile  pyproject.toml
(+1471 files in other folders)
