[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab-test-analytics-service"
version = "0.1.0"
description = "Statistical analysis for A/B tests including z-tests, power calculations, and sequential testing"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
