[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alerting-service"
version = "0.1.0"
description = "Alert rule management, firing, routing, and event history for the observability platform"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
