[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics-service"
version = "0.1.0"
description = "Query API over ClickHouse materialized views and fact tables for ride analytics"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
