[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocomplete-service"
version = "0.1.0"
description = "Autocomplete service — in-memory prefix matching for places and addresses"
requires-python = ">=3.11"
dependencies = [
    "mobility-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
