[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batch-prediction-service"
version = "0.1.0"
description = "Batch scoring over datasets with job management"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
