[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucketing-service"
version = "0.1.0"
description = "Deterministic user bucketing and traffic allocation for experiments"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
