[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdc-connector"
version = "0.1.0"
description = "Change Data Capture: polls PostgreSQL for changes using updated_at columns"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
