[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "city-simulator"
version = "0.1.0"
description = "Agent-based city simulation and scenario management"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
