[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-reporting-service"
version = "0.1.0"
description = "Generates compliance reports against regulatory frameworks"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
