[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cost-tracking-service"
version = "0.1.0"
description = "Cost per trip/request and resource allocation tracking"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
