[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-catalog-service"
version = "0.1.0"
description = "Dataset metadata registry — what data exists, where it lives, its schema"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
