[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-export-service"
version = "0.1.0"
description = "Export query results to downloadable formats (CSV, Parquet, JSON, XLSX)"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
