[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-governance-service"
version = "0.1.0"
description = "Data classification and access policies for governance"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
