[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-lake-writer"
version = "0.1.0"
description = "Medallion architecture data lake writer — Bronze/Silver/Gold layers"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
