[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-lineage-service"
version = "0.1.0"
description = "Data lineage tracking — source to transform to destination graph"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
