[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-quality-service"
version = "0.1.0"
description = "Data quality rule engine — completeness, freshness, accuracy checks"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
