[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-replication-service"
version = "0.1.0"
description = "Replicates data between ClickHouse and MinIO"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
