[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demand-forecast-service"
version = "0.1.0"
description = "Demand forecasting with weather-adjusted predictions across city zones"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
