[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demand-simulator"
version = "0.1.0"
description = "Demand simulation with scenario management and event generation"
requires-python = ">=3.11"
dependencies = ["mobility-common"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
